@@ -40,6 +40,7 @@ import static com.google.errorprone.bugpatterns.checkreturnvalue.ResultUsePolicy
 import static com.google.errorprone.bugpatterns.checkreturnvalue.ResultUsePolicy.UNSPECIFIED;
 import static com.google.errorprone.bugpatterns.checkreturnvalue.Rules.globalDefault;
 import static com.google.errorprone.bugpatterns.checkreturnvalue.Rules.mapAnnotationSimpleName;
+import static com.google.errorprone.bugpatterns.checkreturnvalue.Rules.mapInheritedAnnotationSimpleName;
 import static com.google.errorprone.fixes.SuggestedFix.emptyFix;
 import static com.google.errorprone.fixes.SuggestedFixes.qualifyType;
 import static com.google.errorprone.util.ASTHelpers.enclosingClass;
@@ -156,7 +157,7 @@ public class CheckReturnValue extends AbstractReturnValueIgnored
                 // we should be checking declarations to ensure they aren't producing differing
                 // results (i.e. ensuring an @AutoValue.Builder setter method isn't annotated @CRV).
                 mapAnnotationSimpleName(CHECK_RETURN_VALUE, EXPECTED),
-                mapAnnotationSimpleName(CAN_IGNORE_RETURN_VALUE, OPTIONAL),
+                mapInheritedAnnotationSimpleName(CAN_IGNORE_RETURN_VALUE, OPTIONAL),
                 protoBuilders(),
                 mutableProtos(),
                 autoValues(),
@@ -214,7 +215,7 @@ public class CheckReturnValue extends AbstractReturnValueIgnored
         // and its first statement should be a super() call to the method in question.
         return constructor
             .map(MethodTree::getBody)
-            .map(block -> block.getStatements().get(0))
+            .map(block -> block.getStatements().getFirst())
             .map(ExpressionStatementTree.class::cast)
             .map(ExpressionStatementTree::getExpression)
             .map(MethodInvocationTree.class::cast)
@@ -291,7 +292,7 @@ public class CheckReturnValue extends AbstractReturnValueIgnored
     if (!ASTHelpers.isVoidType(method.getReturnType(), state)) {
       return Description.NO_MATCH;
     }
-    String message = annotationOnVoid(presentAnnotations.get(0), "methods");
+    String message = annotationOnVoid(presentAnnotations.getFirst(), "methods");
     return buildDescription(tree).setMessage(message).build();
   }
 
