@@ -57,7 +57,9 @@ public class UnnecessaryLongToIntConversion extends BugChecker
   // for each case.
   private static final Matcher<ExpressionTree> LONG_TO_INT_STATIC_METHODS =
       anyOf(
-          staticMethod().onClass("com.google.common.primitives.Ints").named("checkedCast"),
+          staticMethod()
+              .onClass("com.google.common.primitives.Ints")
+              .namedAnyOf("checkedCast", "saturatedCast"),
           staticMethod().onClass("java.lang.Math").named("toIntExact"));
 
   private static final Matcher<ExpressionTree> LONG_TO_INT_INSTANCE_METHODS =
@@ -133,7 +135,7 @@ public class UnnecessaryLongToIntConversion extends BugChecker
       if (LONG_TO_INT_STATIC_METHOD_ON_LONG_VALUE_MATCHER.matches(arg, state)) {
         // Get the first argument to the method. This works because the methods we are matching have
         // only one parameter, which is the long or Long parameter we care about.
-        ExpressionTree methodArgExpression = ((MethodInvocationTree) arg).getArguments().get(0);
+        ExpressionTree methodArgExpression = ((MethodInvocationTree) arg).getArguments().getFirst();
         String methodArg = state.getSourceForNode(methodArgExpression);
         return buildDescription(tree)
             // Remove the static method and just keep the arguments (i.e. the long values).
